67116552,edit my profie

--- a/hl.html
+++ b/hl.html
@@ -15,8 +15,14 @@
     </section1>
 
     <section2>
-        <div class="Pete">
+        <div>
         <!--67116552พีท-->
+        <center>
+            <img src="pete.jpg" alt="pete" width="200px">
+            <h2>supakorn intarakul</h2>
+            <h3>67116552</h3>
+            <p>อย่ากลัวความล้มเหลว จงกลัวการที่คุณไม่ได้ลอง</p>
+        </center>
         </div>
     </section2>
 
