--- a/hl.html
+++ b/hl.html
@@ -9,32 +9,35 @@
 <body>
     <h1>collab project</h1>
     <section1>
-        <div class="Tiw">
+        <div>
     <!--67096842ทิว-->
         </div>
     </section1>
 
     <section2>
-        <div class="Pete">
+        <div>
         <!--67116552พีท-->
         </div>
     </section2>
 
      <section3>
-        <div class="Nuri">
+        <div>
     <!--67095943นุ-->
         </div>
     </section3>
 
     <section4>
-        <div class="aum">
-    <!--67109320อั้ม-->
+        <div>
+    <!--67109344อั้ม-->
+    <img src="https://studentscms.spu.ac.th/stdempimg.cfm?empstdtype=STD&vdata=0DD7C9ECDE82FAA50529CFD6D605CED082E21B0CD2F8DAD6" alt="" width="200px">
+    <h3>67109344 อิฐศิวะ ต่อเหล่าทรัพย์</h3>
+    <h3>หิวข้าว ซื้อข้าวให้หน่อย</h3>
         </div>
     </section4>
 
     <section5>
-        <div class="beam">
-    <!--67109344บีม-->
+        <div>
+    <!--67109320บีม-->
         </div>
     </section5>
 
